# telescope

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: lint.yml
api/accounts/: serializers.py  tests.py  urls.py  views.py
api/core/: settings.py  urls.py
api/realestate/: admin.py  models.py  serializers.py  urls.py  views.py
api/realestate/migrations/: 0001_initial.py  0002_property_address.py  0003_property_image.py  0004_alter_property_options_and_more.py
ui/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/src/: App.js  App.tsx  constants.js  main.tsx
ui/src/api/: index.ts
ui/src/components/: TemplatePointers.tsx
ui/src/components/Cards/: TitleCard.tsx
ui/src/components/Input/: InputText.tsx  SearchBar.tsx  SelectBox.tsx  TextAreaInput.tsx  ToggleInput.tsx
ui/src/components/Typography/: ErrorText.tsx  Title.tsx
ui/src/containers/: ConfirmationModalBody.tsx  Header.tsx  Layout.tsx  LeftSidebar.tsx  ModalLayout.tsx  PageContent.tsx  SuspenseContent.tsx
ui/src/features/dashboard/: BarChart.tsx  DashboardStats.tsx  DashboardTopBar.tsx  LineChart.tsx  index.tsx
ui/src/features/integrations/: index.tsx
ui/src/features/portfolios/: AddPortfolioModal.tsx  UpdatePortfolioModal.tsx  index.tsx  portfolioSlice.ts
ui/src/features/properties/: AddPropertyModal.tsx  MapModal.tsx  index.tsx  (+1 more)
ui/src/pages/: Register.tsx  routes.tsx
ui/src/store/: headerSlice.ts  modalSlice.ts  rightDrawerSlice.ts  rootReducer.ts
ui/src/utils/: checkAuth.ts
(+13 files in other folders)
